--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "express": "^5.0.0",
-    "typescript": "^4.5.0"
+    "joi": "^17.13.3",
+    "mysql2": "^3.13.0",
+    "typescript": "^4.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/joi": "^17.2.2",
+    "@types/uuid": "^10.0.0",
     "jtest": "^0.0.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
