--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,5 +9,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
